--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <div id="ra"></div>
     <div id="wormhole">
       <center>
-        <a href="./home.html" im
-          ><img id="pic" src="./assets/portal.png" alt="wormhole"
-        /></a>
+        <a href="./home.html">img id="pic" src="./assets/portal.png" alt="wormhole"/></a>
       </center>
     </div>
     <a id="skip" href="./home.html">SKIP >></a>
