--- a/dev/index.html
+++ b/dev/index.html
@@ -12,10 +12,11 @@
 
 
 
-      <div id="panel">
+           <div id="panel">
         <center>
-          <img src="../assets/self.png" />
+          <img src="../assets/pp.jpg" id='pp'/>
         </center>
+
 
         <div id="self">
           <h1 title="< RA >">Parth Agarwal</h1>
