--- a/dev/index.html
+++ b/dev/index.html
@@ -26,7 +26,7 @@ I am currently a(n):
   <li> <font title="@Jaypee Institute of Information Technology" >C.S. junior year undergrad</font>
   </li>
   <li> <font title="Jinchūriki of the py-tailed-fox">Python</font>, <font title="Pirate of g++ C">C++</font> and JS Developer</li>
-<li> AI Enthusiast  
+<li> AI Enthusiast
   </li>
   <li>
   lil' bit of a Front-End Designer
@@ -141,7 +141,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
 
 <div id="box">
     <p id="heading"><a href="https://github.com/ra101/Entry-Management-Software" target="_blank">Entry Managment System</a></p>
-    <p id="disc">An entry management application built using electron(node.js) and firebase [also nodemailer and nexmo]</p>
+    <p id="disc">An entry management application built using Electron, Firebase and other APIs</p>
     <center>
     <a href="https://github.com/ra101/Entry-Management-Software/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/Entry-Management-Software?style=flat-square"></a>
     <a href="https://github.com/ra101/Entry-Management-Software/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/Entry-Management-Software?style=flat-square&label=★"></a>
@@ -150,8 +150,8 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
   </div>  
 
   <div id="box">
-      <p id="heading"><a href="https://github.com/ra101/Generic-BlockChain-container-cpp" target="_blank">Generic BlockChain Container</a></p>
-      <p id="disc">A STL sort of bloackchain template container, which takes in a hash function and transaction class as input</p>
+      <p id="heading"><a href="https://github.com/ra101/Generic-BlockChain-container-cpp" target="_blank">BlockChain Template Container</a></p>
+      <p id="disc">A STL sort of container, which takes in a hash function and transaction class as inputs.</p>
       <center>
       <a href="https://github.com/ra101/Generic-BlockChain-container-cpp/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/Generic-BlockChain-container-cpp?style=flat-square"></a>
       <a href="https://github.com/ra101/Generic-BlockChain-container-cpp/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/Generic-BlockChain-container-cpp?style=flat-square&label=★"></a>
@@ -163,7 +163,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
     
   <div id="box">
       <p id="heading"><a href="https://github.com/ra101/quantum-gates-simulator-cpp" target="_blank">Quantum Simulator (WIP)</a></p>
-      <p id="disc">A STL sort of bloackchain template container, which takes in a hash function and transaction class as input</p>
+      <p id="disc">Simulating Qubit gates/algos on binary bits to get result as of a ideal quantum computer.</p>
       <center>
       <a href="https://github.com/ra101/quantum-gates-simulator-cpp/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/quantum-gates-simulator-cpp?style=flat-square"></a>
       <a href="https://github.com/ra101/quantum-gates-simulator-cpp/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/quantum-gates-simulator-cpp?style=flat-square&label=★"></a>
