--- a/dev/index.html
+++ b/dev/index.html
@@ -131,8 +131,6 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
     <p id="heading"><a href="https://github.com/ra101/kissSolver" target="_blank">kissSolver</a></p>
     <p id="disc">An A.I. C.A.P.T.C.H.A. Solver browser-extension for KissAnime written in JavaScript with help of python.</p>
     <center>
-    <a href="https://github.com/ra101/kissSolver/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/kissSolver?style=flat-square"></a>
-    <a href="https://github.com/ra101/kissSolver/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/kissSolver?style=flat-square&label=★"></a>
     <img src="https://img.shields.io/badge/Made%20with-JavaScript-FFD600?style=flat-square&logo=javascript">
     </center>
   </div>  
@@ -141,10 +139,8 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
 
 <div id="box">
     <p id="heading"><a href="https://github.com/ra101/Entry-Management-Software" target="_blank">Entry Managment System</a></p>
-    <p id="disc">An entry management application built using Electron, Firebase and other APIs</p>
+    <p id="disc">A basic booking system with general idea of host and client built using Electron (Node.JS), Firebase and other APIs</p>
     <center>
-    <a href="https://github.com/ra101/Entry-Management-Software/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/Entry-Management-Software?style=flat-square"></a>
-    <a href="https://github.com/ra101/Entry-Management-Software/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/Entry-Management-Software?style=flat-square&label=★"></a>
     <img src="https://img.shields.io/badge/Made%20with-Electron-2B2F3B?style=flat-square&logo=electron">
     </center>
   </div>  
@@ -153,8 +149,6 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
       <p id="heading"><a href="https://github.com/ra101/Generic-BlockChain-container-cpp" target="_blank">BlockChain Template Container</a></p>
       <p id="disc">A STL sort of container, which takes in a hash function and transaction class as inputs.</p>
       <center>
-      <a href="https://github.com/ra101/Generic-BlockChain-container-cpp/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/Generic-BlockChain-container-cpp?style=flat-square"></a>
-      <a href="https://github.com/ra101/Generic-BlockChain-container-cpp/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/Generic-BlockChain-container-cpp?style=flat-square&label=★"></a>
       <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
       </center>
     </div>  
@@ -165,8 +159,6 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
       <p id="heading"><a href="https://github.com/ra101/quantum-gates-simulator-cpp" target="_blank">Quantum Simulator (WIP)</a></p>
       <p id="disc">Simulating Qubit gates/algos on binary bits to get result as of a ideal quantum computer.</p>
       <center>
-      <a href="https://github.com/ra101/quantum-gates-simulator-cpp/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/quantum-gates-simulator-cpp?style=flat-square"></a>
-      <a href="https://github.com/ra101/quantum-gates-simulator-cpp/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/quantum-gates-simulator-cpp?style=flat-square&label=★"></a>
       <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
       </center>
     </div>  
@@ -175,8 +167,6 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
         <p id="heading"><a href="https://github.com/ra101/Maze-Solver-Cpp" target="_blank">Maze Solver (OpenCV)</a></p>
         <p id="disc">Input a Image, Choose from a variety of algorithms, get solved image along with time and steps mesurement.</p>
         <center>
-        <a href="https://github.com/ra101/Maze-Solver-Cpp/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/Maze-Solver-Cpp?style=flat-square"></a>
-        <a href="https://github.com/ra101/Maze-Solver-Cpp/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/Maze-Solver-Cpp?style=flat-square&label=★"></a>
         <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
         </center>
       </div>
@@ -185,8 +175,6 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
         <p id="heading"><a href="http://thewtvlist.epizy.com/" target="_blank">the WTV List</a></p>
         <p id="disc">Click <a href="https://github.com/ra101/theWTVlist" target="_blank">here</a> to visit repo.<br>This is cataloging website, with adv. search options using sql queries.</p>
         <center>
-        <a href="https://github.com/ra101/theWTVlist/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/theWTVlist?style=flat-square"></a>
-        <a href="https://github.com/ra101/theWTVlist/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/theWTVlist?style=flat-square&label=★"></a>
         <img src="https://img.shields.io/badge/Made%20with-PHP-8993BE?style=flat-square&logo=php">
         </center>
       </div>  
@@ -196,8 +184,6 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
           <p id="disc">A 2P Game made in "C" with the use of pointers, customized stack and file handling with save option.
             </p>
           <center>
-          <a href="https://github.com/ra101/Connect-4/network/members" target="_blank"><img src="https://img.shields.io/github/forks/ra101/Connect-4?style=flat-square"></a>
-          <a href="https://github.com/ra101/Connect-4/stargazers" target="_blank"><img src="https://img.shields.io/github/stars/ra101/Connect-4?style=flat-square&label=★"></a>
           <img src="https://img.shields.io/badge/Made%20with-C-3949AB?style=flat-square&logo=c">
           </center>
         </div>
