--- a/dev/index.html
+++ b/dev/index.html
@@ -87,7 +87,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
                 /></a>
               </th>
               <th>
-                  <a href="https://www.linkedin.com/in/agarwal-parth/" target="_blank"  title="/in/parth-agarwal-525499185/" >    <img src="../assets/linkedin.svg" /></a>
+                  <a href="https://www.linkedin.com/in/agarwal-parth/" target="_blank"  title="/in/agarwal-parth/" >    <img src="../assets/linkedin.svg" /></a>
               </th>
               <th>
                 <a href="https://t.me/ra_101" title="ra_101" target="_blank"
