--- a/dev/index.html
+++ b/dev/index.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <title>
@@ -87,7 +88,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
                 /></a>
               </th>
               <th>
-                  <a href="https://www.linkedin.com/in/agarwal-parth/" target="_blank"  title="/in/agarwal-parth/" >    <img src="../assets/linkedin.svg" /></a>
+                  <a href="https://www.linkedin.com/in/parth-agarwal-525499185/" target="_blank"  title="/in/parth-agarwal-525499185/" >    <img src="../assets/linkedin.svg" /></a>
               </th>
               <th>
                 <a href="https://t.me/ra_101" title="ra_101" target="_blank"
@@ -127,6 +128,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
           </table>
 <hr>
 
+<div id="truck">
 <div id="box">
     <p id="heading"><a href="https://github.com/ra101/kissSolver" target="_blank">kissSolver</a></p>
     <p id="disc">An A.I. C.A.P.T.C.H.A. Solver browser-extension for KissAnime written in JavaScript with help of python.</p>
@@ -198,7 +200,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
           
           </div>
 
-
+        </div>
     </div>
 
     <br>
@@ -221,7 +223,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
 
           </table>
           <hr>
-
+<div id="toolbox">
           <div id="circle" title="Python">
               <img src='../assets/skills/python.png'  />
             </div>
@@ -262,7 +264,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
         <div id="circle" title="Adobe Photoshop" >
             <img src='../assets/skills/photoshop.png' />
             </div>
-
+          </div>
        </div>
 </div>
       </body>
