--- a/dev/index.html
+++ b/dev/index.html
@@ -105,7 +105,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
     <div id="projects">
 
 
-        <table style="width: fit-content;vertical-align: bottom;">
+        <table id='proj_header' style="width: fit-content;vertical-align: bottom;">
             <tr >
               <td style="width: 80px;">
                 <p id="heading" style="background: #202020;
@@ -118,7 +118,7 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
 
               </td>
               <td>
-                  <p id="heading"> Projects<br><font style="font-size: 16px;font-weight: normal;color:dimgray">A Showcase of my Repos!</font>
+                  <p id="heading"> Projects<br><font id='tagline' style="font-weight: normal;color:dimgray">A Showcase of my Repos!</font>
                   </p>
 
 
@@ -208,15 +208,15 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
 
 
 <br>
-        <div id="skills">
-          <table style="width: fit-content;vertical-align: bottom;">
+        <div id="skills" >
+          <table id = 'proj_header' style="width: fit-content;vertical-align: bottom;">
             <tr >
-              <th style="width: 80px;">
-                  <img src='../assets/skills.png' style="width:80px;height:80px" />
+              <th>
+                  <img src='../assets/skills.png' />
 
               </td>
               <td>
-                  <p id="heading"> Skills <br><font style="font-size: 16px;font-weight: normal;color:dimgray">Still polishing them...</font>
+                  <p id="heading"> Skills <br><font id='tagline' style="font-weight: normal;color:dimgray">Still polishing them...</font>
                   </p>
               </td>
               </tr>
