--- a/dev/index.html
+++ b/dev/index.html
@@ -57,10 +57,10 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
           
             <tr>
               <th  align="right">
-      <img src="../assets/gmail.svg" />
+      <img src="../assets/protonmail.svg" />
               </th>
               <td>
-                <a href="mailto:agarwal.parth.101@gmial.com">agarwal.parth.101@gmail.com</a>
+                <a href="mailto:agarwal.parth.101@gmial.com">agarwal.parth.101@protonmail.com</a>
               </td>
             </tr>
           </table>
@@ -83,8 +83,8 @@ I like to explore other languages / frameworks / tech as well, such as Electron,
                 <a href='https://github.com/ra101' title="ra101" target="_blank"><img src="../assets/github.svg" />
               </th>
               <th>
-                <a href="mailto:agarwal.parth.101.gmail.com" title="agarwal.parth.101.gmail.com">
-                  <img src="../assets/gmail.svg"
+                <a href="mailto:agarwal.parth.101.protonmail.com" title="agarwal.parth.101.protonmail.com">
+                  <img src="../assets/protonmail.svg"
                 /></a>
               </th>
               <th>
