--- a/dev/index.html
+++ b/dev/index.html
@@ -26,8 +26,8 @@
 I am currently a(n):
   <li> <font title="@Jaypee Institute of Information Technology" >C.S. junior year undergrad</font>
   </li>
-  <li> <font title="Jinchūriki of the py-tailed-fox">Python</font>, <font title="Pirate of g++ C">C++</font> and JS Developer</li>
-<li> AI Enthusiast
+  <li> <font title="Jinchūriki of the py-tailed-fox">Python</font>, <font title="Pirate of g++ C">C++</font> and <font title="Jack of all Scripts">JS Developer</font></li>
+		  <li> <font title="I don't worry, if can't understand ;)">AI Enthusiast</font>
   </li>
   <li>
   lil' bit of a Front-End Designer
@@ -36,7 +36,7 @@ I am currently a(n):
   Self-Proclaimed Photoshop Master
 </li>
 </ul>
-I like to explore other languages / frameworks / tech as well, such as Electron, Unity, Rails ...etc.
+I like to explore other languages / frameworks / tech as well, such as Electron, Unity, Django ...etc.
 </p>
 
 
