--- a/dev/index.html
+++ b/dev/index.html
@@ -26,7 +26,7 @@
 I am currently a(n):
   <li> <font title="@Jaypee Institute of Information Technology" >C.S. junior year undergrad</font>
   </li>
-  <li> <font title="Jinchūriki of the py-tailed-fox">Python</font>, <font title="Pirate of g++ C">C++</font> and <font title="Jack of all Scripts">JS Developer</font></li>
+  <li> <font title="Jinchūriki of the py-tailed-fox">Python</font>, <font title="Pirate of g++ C">C++</font> and <font title="Jack of all Scripts">JS</font> Developer</li>
 		  <li> <font title="I don't worry, if can't understand ;)">AI Enthusiast</font>
   </li>
   <li>
