--- a/index.html
+++ b/index.html
@@ -10,45 +10,17 @@
             type="image/x-icons"
         >
         <link href="../stylesheets/index.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,900;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="wrapper">
             <div id="panel">
-                <center>
-                    <img src="../assets/pp.jpg" id="pp">
-                </center>
                 <div id="self">
+                    <center>
+                        <img src="../assets/pp.jpg" id="pp">
+                    </center>
                     <h1 title="< RA >">Parth Agarwal</h1>
                     <hr>
-                    <p>
-                        I am currently a(n):
-                        <li>
-                            <span class="bullet">🎓</span>
-                            <font title="@Jaypee Institute of Information Technology">C.S.E. final year undergrad.</font>
-                        </li>
-                        <li>
-                            <span class="bullet">🚀</span>
-                            Python, C++ and JS Developer
-                        </li>
-                        <li>
-                            <span class="bullet">📈</span>
-                            <font title="I don't worry, if can't understand ;)">AI Enthusiast</font>
-                        </li>
-                        <li>
-                            <span class="bullet">💀</span>
-                            Backend dev.
-                        </li>
-                        <li>
-                            <span class="bullet">🎨</span>
-                            lil' bit of a Front-End Designer
-                        </li>
-                        <li>
-                            <span class="bullet">😤</span>
-                            Self-Proclaimed Photoshop Master
-                        </li>
-                        <br>
-                        I like to explore other languages / frameworks / tech as well, such as Electron, Unity, Django ...etc.
-                    </p>
                 </div>
                 <div id="links">
                     <table>
@@ -73,6 +45,8 @@
                             </td>
                         </tr>
                     </table>
+                </div>
+                <div id="links">
                     <table>
                         <tr>
                             <th width="40%" align="right">
@@ -83,6 +57,8 @@
                             </td>
                         </tr>
                     </table>
+                </div>
+                <div id="links">
                     <table style="border-top:1px solid lightgray">
                         <tr>
                             <th>
@@ -109,27 +85,91 @@
                     </div>
                 </div>
                 <div id="content">
+                    <div class="full_scale">
+                        <h1 id="headiers" style="font-size: 4em;">
+                            Hi
+                            <font id="ip_add">127.0.0.1</font>
+                            !
+                            <span id="hello_emoji"></span>
+                        </h1>
+                        <br>
+                        <div id="intro">
+                            I am currently a(n):
+                            <li>
+                                <span class="bullet">🎓</span>
+                                <font title="@Jaypee Institute of Information Technology">C.S.E. final year undergrad.</font>
+                            </li>
+                            <li>
+                                <span class="bullet">🚀</span>
+                                Python, C++ and JS Developer
+                            </li>
+                            <li>
+                                <span class="bullet">📈</span>
+                                <font title="I don't worry, if can't understand ;)">AI Enthusiast</font>
+                            </li>
+                            <li>
+                                <span class="bullet">💀</span>
+                                Backend dev.
+                            </li>
+                            <li>
+                                <span class="bullet">🎨</span>
+                                lil' bit of a Front-End Designer
+                            </li>
+                            <li>
+                                <span class="bullet">😤</span>
+                                Self-Proclaimed Photoshop Master
+                            </li>
+                            <br>
+                            I like to explore other languages / frameworks / tech as well, such as Electron, Unity, Django ...etc.
+                        </div>
+                    </div>
+                    <div class="full_scale">
+                        <div id="skills">
+                            <h1 id="headiers">Skills:</h1>
+                            <hr>
+                            <div id="toolbox">
+                                <div class="skillset">
+                                    <font class="skilltype">Languages</font>
+                                    <li>C & C++</li>
+                                    <li>Python</li>
+                                    <li>JavaScript</li>
+                                    <li>PHP</li>
+                                    <li>SQL</li>
+                                </div>
+                                <div class="skillset">
+                                    <font class="skilltype">Frameworks</font>
+                                    <li>Django & DRf</li>
+                                    <li>ElectronJS</li>
+                                    <li>Flutter</li>
+                                    <li>Unity 3D</li>
+                                </div>
+                                <div class="skillset">
+                                    <font class="skilltype">Databases</font>
+                                    <li>MySQL</li>
+                                    <li>MariaDB</li>
+                                    <li>MongoDB</li>
+                                    <li>PostgreSQL</li>
+                                </div>
+                                <div class="skillset">
+                                    <font class="skilltype">Tools</font>
+                                    <li>Git & Github</li>
+                                    <li>Chrome DevTools</li>
+                                    <li>Dialogflow</li>
+                                    <li>cURL</li>
+                                    <li>Postwoman</li>
+                                </div>
+                                <div class="skillset">
+                                    <font class="skilltype">Others</font>
+                                    <li>NodeJS</li>
+                                    <li>CapacitorJS</li>
+                                    <li>Ethereum</li>
+                                    <li>PostGIS</li>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div id="projects">
-                        <table id="proj_header" style="width: fit-content;vertical-align: bottom;">
-                            <tr>
-                                <td style="width: 80px;">
-                                    <p id="heading" style="background: #202020;
-                border-top: 7px solid #ee6600;
-                border-radius: 5px;
-                text-align: center;
-                padding: 5px;
-				text-shadow:0px 0px 10px rgb(223,  0,223);
-                font-family:'Courier New', Courier, monospace;color:#ffffff">&lt;/&gt;</p>
-                                </td>
-                                <td>
-                                    <p id="heading">
-                                        Projects
-                                        <br>
-                                        <font id="tagline" style="font-weight: normal;color:dimgray">A Showcase of my Repos!</font>
-                                    </p>
-                                </td>
-                            </tr>
-                        </table>
+                        <h1 id="headiers">Projects:</h1>
                         <hr>
                         <div id="truck">
                             <div id="box">
@@ -193,7 +233,9 @@
                                 </center>
                             </div>
                             <div id="box">
-                                <a href="https://github.com/ra101/Connect-4" target="_blank">Connect 4</a>
+                                <p id="heading">
+                                    <a href="https://github.com/ra101/Connect-4" target="_blank">Connect 4</a>
+                                </p>
                                 <p id="disc">
                                     A 2P Game made in "C" with the use of pointers, customized stack and file handling with save option.
                                 </p>
@@ -202,14 +244,18 @@
                                 </center>
                             </div>
                         </div>
-                    </div>
+                    </h1>
                     <br>
-                    <div id="skills">
-                        <h1 id="skills">Skills:</h1>
-                        <hr>
-                        <div id="toolbox">
-                            <div class="skillset"></div>
-                        </div>
-                    </div>
                 </div>
-            </html>
+            </div>
+            <script>  
+                    var xhttp = new XMLHttpRequest();
+                    xhttp.onreadystatechange = function() {
+                      if (this.readyState == 4 && this.status == 200) {
+                       document.getElementById("ip_add").innerHTML = this.responseText;
+                      }
+                    };
+                    xhttp.open("GET", "https://api.ipify.org/", true);
+                    xhttp.send();
+            </script>
+        </html>
