--- a/index.html
+++ b/index.html
@@ -123,6 +123,45 @@
                             I like to explore other languages / frameworks / tech as well, such as Electron, Unity, Django ...etc.
                         </div>
                     </div>
+                    <div class="background full_scale">
+                        <div id="exp">
+                            <h1 id="headiers">Experience:</h1>
+                            <hr>
+                            <table class="exp">
+                                <tr>
+                                    <th>Innovaccer</th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <td>SDE - Intern</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>Product Engineering</td>
+                                    <td id="date">April 2020 - June 2020</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <br>
+                        <div id="edu">
+                            <h1 id="headiers">Education:</h1>
+                            <hr>
+                            <table class="edu">
+                                <tr>
+                                    <th>Jaypee Institute of Information Technology, Noida Sec 62</th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <td>B. Tech. / CSE</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>A CGPA of 7.8 as of end of 5th semester.</td>
+                                    <td id="date">July 2017 - May 2021</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
                     <div class="full_scale">
                         <div id="skills">
                             <h1 id="headiers">Skills:</h1>
