--- a/index.html
+++ b/index.html
@@ -213,81 +213,110 @@
                         <div id="truck">
                             <div id="box">
                                 <p id="heading">
-                                    <a href="https://github.com/ra101/kissSolver" target="_blank">kissSolver</a>
-                                </p>
-                                <p id="disc">An A.I. C.A.P.T.C.H.A. Solver browser-extension for KissAnime written in JavaScript with help of python.</p>
-                                <center>
-                                    <img src="https://img.shields.io/badge/Made%20with-JavaScript-FFD600?style=flat-square&logo=javascript">
-                                </center>
-                            </div>
-                            <div id="box">
-                                <p id="heading">
-                                    <a href="https://github.com/ra101/Entry-Management-Software" target="_blank">Entry Managment System</a>
-                                </p>
-                                <p id="disc">A basic booking system with general idea of host and client built using Electron (Node.JS), Firebase and other APIs</p>
-                                <center>
-                                    <img src="https://img.shields.io/badge/Made%20with-Electron-2B2F3B?style=flat-square&logo=electron">
-                                </center>
-                            </div>
-                            <div id="box">
-                                <p id="heading">
-                                    <a href="https://github.com/ra101/Generic-BlockChain-container-cpp" target="_blank">BlockChain Template Container</a>
-                                </p>
-                                <p id="disc">A STL sort of container, which takes in a hash function and transaction class as inputs.</p>
-                                <center>
-                                    <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
-                                </center>
-                            </div>
-                            <div id="box">
-                                <p id="heading">
-                                    <a href="https://github.com/ra101/quantum-gates-simulator-cpp" target="_blank">Quantum Simulator {WIP}</a>
-                                </p>
-                                <p id="disc">Simulating Qubit gates/algos on binary bits to get result as of a ideal quantum computer.</p>
-                                <center>
-                                    <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
-                                </center>
-                            </div>
-                            <div id="box">
-                                <p id="heading">
-                                    <a href="https://github.com/ra101/Maze-Solver-Cpp" target="_blank">Maze Solver</a>
-                                </p>
-                                <p id="disc">Input a Image, Choose from a variety of algorithms, get solved image along with time and steps mesurement.</p>
-                                <center>
-                                    <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
-                                </center>
-                            </div>
-                            <div id="box">
-                                <p id="heading">
-                                    <a href="http://thewtvlist.epizy.com/" target="_blank">the WTV List</a>
+                                    <a href="https://t.me/MasquerBot" target="_blank">MasquerBot</a>
                                 </p>
                                 <p id="disc">
                                     Click
-                                    <a href="https://github.com/ra101/theWTVlist" target="_blank">here</a>
+                                    <a href="https://github.com/ra101/MasquerBot" target="_blank">here</a>
                                     to visit repo.
                                     <br>
-                                    This is cataloging website, with adv. search options using sql queries.
-                                </p>
-                                <center>
-                                    <img src="https://img.shields.io/badge/Made%20with-PHP-8993BE?style=flat-square&logo=php">
-                                </center>
-                            </div>
-                            <div id="box">
-                                <p id="heading">
-                                    <a href="https://github.com/ra101/Connect-4" target="_blank">Connect 4</a>
-                                </p>
-                                <p id="disc">
-                                    A 2P Game made in "C" with the use of pointers, customized stack and file handling with save option.
-                                </p>
-                                <center>
-                                    <img src="https://img.shields.io/badge/Made%20with-C-3949AB?style=flat-square&logo=c">
-                                </center>
-                            </div>
+                                    This Telegram Bot uses state-of-the-art encryption algorithm (ECDSA) and pixel manipulation
+                                    (steganography) to masque any given
+                                    <text>
+                                        within any given
+                                        <image>
+                                            .
+                                        </p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-Python-00b?style=flat-square&logo=python">
+                                        </center>
+                                    </div>
+                                    <div id="box">
+                                        <p id="heading">
+                                            <a href="https://github.com/ra101/Entry-Management-Software" target="_blank">Entry Managment System</a>
+                                        </p>
+                                        <p id="disc">A basic booking system with general idea of host and client built using Electron (Node.JS), Firebase and other APIs</p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-Electron-2B2F3B?style=flat-square&logo=electron">
+                                        </center>
+                                    </div>
+                                    <div id="box">
+                                        <p id="heading">
+                                            <a href="https://github.com/ra101/Reducing-the-Global-Carbon-Footprint-based-on-MARL" target="_blank">Reducing the Global Carbon Footprint based on MARL</a>
+                                        </p>
+                                        <p id="disc">Future work on the paper "Reducing Global Carbon Footprint based on MARL" by "Valentin Kahn".</p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-Python-00?style=flat-square&logo=python">
+                                        </center>
+                                    </div>
+                                    <div id="box">
+                                        <p id="heading">
+                                            <a href="https://github.com/ra101/kissSolver" target="_blank">kissSolver</a>
+                                        </p>
+                                        <p id="disc">An A.I. C.A.P.T.C.H.A. Solver browser-extension for KissAnime written in JavaScript with help of python.</p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-JavaScript-FFD600?style=flat-square&logo=javascript">
+                                        </center>
+                                    </div>
+                                    <div id="box">
+                                        <p id="heading">
+                                            <a href="https://github.com/ra101/Generic-BlockChain-container-cpp" target="_blank">BlockChain Template Container</a>
+                                        </p>
+                                        <p id="disc">A STL sort of container, which takes in a hash function and transaction class as inputs.</p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
+                                        </center>
+                                    </div>
+                                    <div id="box">
+                                        <p id="heading">
+                                            <a href="https://github.com/ra101/quantum-gates-simulator-cpp" target="_blank">Quantum Simulator {WIP}</a>
+                                        </p>
+                                        <p id="disc">Simulating Qubit gates/algos on binary bits to get result as of a ideal quantum computer.</p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
+                                        </center>
+                                    </div>
+                                    <div id="box">
+                                        <p id="heading">
+                                            <a href="https://github.com/ra101/Maze-Solver-Cpp" target="_blank">Maze Solver</a>
+                                        </p>
+                                        <p id="disc">Input a Image, Choose from a variety of algorithms, get solved image along with time and steps mesurement.</p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-C++-0075C0?style=flat-square&logo=c%2B%2B">
+                                        </center>
+                                    </div>
+                                    <div id="box">
+                                        <p id="heading">
+                                            <a href="http://thewtvlist.epizy.com/" target="_blank">the WTV List</a>
+                                        </p>
+                                        <p id="disc">
+                                            Click
+                                            <a href="https://github.com/ra101/theWTVlist" target="_blank">here</a>
+                                            to visit repo.
+                                            <br>
+                                            This is cataloging website, with adv. search options using sql queries.
+                                        </p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-PHP-8993BE?style=flat-square&logo=php">
+                                        </center>
+                                    </div>
+                                    <div id="box">
+                                        <p id="heading">
+                                            <a href="https://github.com/ra101/Connect-4" target="_blank">Connect 4</a>
+                                        </p>
+                                        <p id="disc">
+                                            A 2P Game made in "C" with the use of pointers, customized stack and file handling with save option.
+                                        </p>
+                                        <center>
+                                            <img src="https://img.shields.io/badge/Made%20with-C-3949AB?style=flat-square&logo=c">
+                                        </center>
+                                    </div>
+                                </div>
+                            </h1>
+                            <br>
                         </div>
-                    </h1>
-                    <br>
-                </div>
-            </div>
-            <script>  
+                    </div>
+                    <script>  
                     var xhttp = new XMLHttpRequest();
                     xhttp.onreadystatechange = function() {
                       if (this.readyState == 4 && this.status == 200) {
@@ -296,5 +325,5 @@
                     };
                     xhttp.open("GET", "https://api.ipify.org/", true);
                     xhttp.send();
-            </script>
-        </html>
+                    </script>
+                </html>
