--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 </a>
                             </th>
                             <td>
-                                <a href="https://github.com/ra101">Resume</a>
+                                <a href="https://raw.githubusercontent.com/ra101/ra101/core/Resume.pdf">Résumé</a>
                             </td>
                         </tr>
                         <tr>
