--- a/index.html
+++ b/index.html
@@ -135,12 +135,10 @@
                             <hr>
                             <table class="exp">
                                 <tr>
-                                    <th>Innovaccer</th>
-                                    <th></th>
+                                    <th colspan="2">Innovaccer</th>
                                 </tr>
                                 <tr>
-                                    <td>SDE - Intern</td>
-                                    <td></td>
+                                    <td colspan="2">SDE - Intern</td>
                                 </tr>
                                 <tr>
                                     <td>Product Engineering</td>
@@ -155,12 +153,10 @@
                             <hr>
                             <table class="edu">
                                 <tr>
-                                    <th>Jaypee Institute of Information Technology, Noida Sec 62</th>
-                                    <th></th>
+                                    <th colspan="2">Jaypee Institute of Information Technology, Noida Sec 62</th>
                                 </tr>
                                 <tr>
-                                    <td>B. Tech. / CSE</td>
-                                    <td></td>
+                                    <td colspan="2">B. Tech. / CSE</td>
                                 </tr>
                                 <tr>
                                     <td>A CGPA of 7.8 as of end of 5th semester.</td>
