--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                         </tr>
                         <tr>
                             <th align="right">
-                                <a href="mailto:agarwal.parth.101@gmial.com">
+                                <a href="mailto:agarwal.parth.101@protonmain.com">
                                     <img src="../assets/protonmail.svg">
                                 </a>
                             </th>
                             <td>
-                                <a href="mailto:agarwal.parth.101@gmial.com">agarwal.parth.101@protonmail.com</a>
+                                <a href="mailto:agarwal.parth.101@protonmail.com">agarwal.parth.101@protonmail.com</a>
                             </td>
                         </tr>
                     </table>
