--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </tr>
                         <tr>
                             <th align="right">
-                                <a href="mailto:agarwal.parth.101@protonmain.com">
+                                <a href="mailto:agarwal.parth.101@protonmail.com">
                                     <img src="../assets/protonmail.svg">
                                 </a>
                             </th>
